[gd_scene load_steps=25 format=3 uid="uid://fbt81m33ijtb"]

[ext_resource type="Script" uid="uid://d4klsjbircvsq" path="res://Scripts/extraction_bed.gd" id="1_2k4m3"]
[ext_resource type="Texture2D" uid="uid://cs7pfnrwfl34w" path="res://Assets/Textures/AnyConv.com__sl_072622_51930_13.hdr" id="1_g2tnf"]
[ext_resource type="Script" uid="uid://cw23ejejwghg" path="res://Scripts/camera_controller.gd" id="2_3k4m3"]
[ext_resource type="Texture2D" uid="uid://cp4mfyrvevmh5" path="res://Assets/Textures/Dark/texture_01.png" id="2_xwv2h"]
[ext_resource type="Script" uid="uid://c6117y7ooqd2i" path="res://Scripts/ui_control_panel.gd" id="3_4k4m3"]
[ext_resource type="Script" uid="uid://c3s2upg53hd5p" path="res://Scripts/free_camera.gd" id="8_freecam"]
[ext_resource type="Script" uid="uid://rt7suxcv2hij" path="res://Scripts/camera_iso_control.gd" id="9_fhk2h"]
[ext_resource type="PackedScene" path="res://Cenas/sphere.tscn" id="10_sphere"]
[ext_resource type="PackedScene" path="res://Cenas/cube.tscn" id="11_cube"]
[ext_resource type="PackedScene" uid="uid://bs6bvdgbi270p" path="res://Cenas/cylinder.tscn" id="12_cylinder"]
[ext_resource type="PackedScene" uid="uid://bx5ovgcp3b1jb" path="res://Cenas/plane.tscn" id="13_plane"]
[ext_resource type="Script" uid="uid://c5vuj1v32js8g" path="res://Scripts/spawner.gd" id="14_spawner"]
[ext_resource type="Script" uid="uid://cbyautdbwb5dg" path="res://Scripts/spawner_ui.gd" id="15_spawnerui"]
[ext_resource type="PackedScene" uid="uid://bq6t8isw3doa5" path="res://Cenas/PauseMenu.tscn" id="16_pausemenu"]
[ext_resource type="Script" uid="uid://n0hile8xer85" path="res://Scripts/object_info.gd" id="17_objectinfo"]
[ext_resource type="Shader" uid="uid://bupq543w5ylqu" path="res://Shaders/outline.gdshader" id="18_outline"]
[ext_resource type="Script" path="res://Scripts/bed_info.gd" id="19_bedinfo"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_xwv2h"]
panorama = ExtResource("1_g2tnf")
energy_multiplier = 1.3

[sub_resource type="Sky" id="Sky_age84"]
sky_material = SubResource("PanoramaSkyMaterial_xwv2h")
radiance_size = 2

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
background_color = Color(0.830986, 0.830478, 0.9141, 1)
sky = SubResource("Sky_age84")
sky_custom_fov = 80.0
ambient_light_source = 2
ambient_light_energy = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_age84"]
albedo_texture = ExtResource("2_xwv2h")

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(8, 0.2, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_outline"]
transparency = 1
albedo_color = Color(0.8, 0.8, 0.8, 0.3)
emission_enabled = true
emission = Color(0, 0.8, 1, 1)
emission_energy_multiplier = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tampa"]
render_priority = 0
shader = ExtResource("18_outline")
shader_parameter/outline_color = Color(0, 0.8, 1, 1)
shader_parameter/transparency = 0.3

[node name="MainScene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Floor"]
material_override = SubResource("StandardMaterial3D_age84")
size = Vector3(8, 0.2, 8)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="ExtractionBed" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
script = ExtResource("1_2k4m3")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="ExtractionBed"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35908, 0)
material_override = SubResource("StandardMaterial3D_outline")
use_collision = true
radius = 0.7
sides = 32

[node name="InnerCylinder" type="CSGCylinder3D" parent="ExtractionBed/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1.38603, 0, 0, 0, 1, 0, -0.030771, 0)
operation = 2
use_collision = true
radius = 0.4
height = 1.70838
sides = 32

[node name="TampaInferior" type="CSGCylinder3D" parent="ExtractionBed/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15883, 0)
cast_shadow = 0
use_collision = true
radius = 0.735
height = 0.0576172
sides = 32
material = SubResource("ShaderMaterial_tampa")

[node name="TampaSuperior" type="CSGCylinder3D" parent="ExtractionBed/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06971, 0)
cast_shadow = 0
use_collision = true
radius = 0.735
height = 0.01
sides = 32
material = SubResource("ShaderMaterial_tampa")

[node name="Spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
script = ExtResource("14_spawner")
spawn_point = NodePath("SpawnerBlock")
object_scenes = {
"cube": ExtResource("11_cube"),
"cylinder": ExtResource("12_cylinder"),
"plane": ExtResource("13_plane"),
"sphere": ExtResource("10_sphere")
}

[node name="SpawnerBlock" type="CSGBox3D" parent="Spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
cast_shadow = 0
size = Vector3(0.3, 0.1, 0.3)

[node name="CameraTop" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9.35908, 0)
current = true

[node name="CameraFront" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.5, -6)

[node name="CameraFree" type="Camera3D" parent="."]
transform = Transform3D(-0.655295, 0, -0.755373, 0, 1, 0, 0.755373, 0, -0.655295, -4, 3.4605, -4)
fov = 60.0
script = ExtResource("8_freecam")

[node name="CameraIso" type="Camera3D" parent="."]
transform = Transform3D(0.783693, 0.310574, -0.53793, 0, 0.866025, 0.5, 0.621148, -0.391847, 0.678698, -3.52846, 5.19071, 3.89156)
fov = 60.0
script = ExtResource("9_fhk2h")

[node name="CameraController" type="Node" parent="."]
script = ExtResource("2_3k4m3")
camera1_path = NodePath("../CameraTop")
camera2_path = NodePath("../CameraFree")
camera3_path = NodePath("../CameraFront")
camera4_path = NodePath("../CameraIso")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 5, 0)
light_energy = 1.5
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
light_energy = 1.5
omni_range = 15.0
omni_attenuation = 1.2

[node name="UIControlPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -361.0
offset_top = 60.0
offset_right = 39.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("3_4k4m3")
extraction_bed_path = NodePath("../ExtractionBed")

[node name="BackgroundBlur" type="ColorRect" parent="UIControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.647059)

[node name="VBoxContainer" type="VBoxContainer" parent="UIControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="ZoomContainer" type="HBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/ZoomContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Zoom"

[node name="ZoomOutButton" type="Button" parent="UIControlPanel/VBoxContainer/ZoomContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "-"

[node name="ZoomValue" type="Label" parent="UIControlPanel/VBoxContainer/ZoomContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "1.0"

[node name="ZoomInButton" type="Button" parent="UIControlPanel/VBoxContainer/ZoomContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+"

[node name="HeightContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/HeightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Altura"

[node name="HeightSlider" type="HSlider" parent="UIControlPanel/VBoxContainer/HeightContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.1
value = 2.0

[node name="HeightValue" type="Label" parent="UIControlPanel/VBoxContainer/HeightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "2.0"

[node name="WidthContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/WidthContainer"]
layout_mode = 2
text = "Largura"

[node name="WidthSlider" type="HSlider" parent="UIControlPanel/VBoxContainer/WidthContainer"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0

[node name="WidthValue" type="Label" parent="UIControlPanel/VBoxContainer/WidthContainer"]
layout_mode = 2
text = "1.0"

[node name="DiameterContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/DiameterContainer"]
layout_mode = 2
text = "Di√¢metro"

[node name="DiameterSlider" type="HSlider" parent="UIControlPanel/VBoxContainer/DiameterContainer"]
layout_mode = 2
min_value = 0.5
max_value = 5.0
step = 0.1
value = 1.0

[node name="DiameterValue" type="Label" parent="UIControlPanel/VBoxContainer/DiameterContainer"]
layout_mode = 2
text = "1.0"

[node name="InnerCylinderContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/InnerCylinderContainer"]
layout_mode = 2
text = "Raio do Espa√ßo Interno"

[node name="InnerRadiusSlider" type="HSlider" parent="UIControlPanel/VBoxContainer/InnerCylinderContainer"]
layout_mode = 2
min_value = 0.1
max_value = 0.69
step = 0.01
value = 0.4

[node name="InnerRadiusValue" type="Label" parent="UIControlPanel/VBoxContainer/InnerCylinderContainer"]
layout_mode = 2
text = "0.4"

[node name="OutlineContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/OutlineContainer"]
layout_mode = 2
text = "Outline"

[node name="TransparencyContainer" type="HBoxContainer" parent="UIControlPanel/VBoxContainer/OutlineContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/OutlineContainer/TransparencyContainer"]
layout_mode = 2
text = "Transpar√™ncia"

[node name="TransparencySlider" type="HSlider" parent="UIControlPanel/VBoxContainer/OutlineContainer/TransparencyContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.3

[node name="TransparencyValue" type="Label" parent="UIControlPanel/VBoxContainer/OutlineContainer/TransparencyContainer"]
layout_mode = 2
text = "0.3"

[node name="OutlineColorContainer" type="HBoxContainer" parent="UIControlPanel/VBoxContainer/OutlineContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/OutlineContainer/OutlineColorContainer"]
layout_mode = 2
text = "Cor"

[node name="OutlineColorButton" type="ColorPickerButton" parent="UIControlPanel/VBoxContainer/OutlineContainer/OutlineColorContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
color = Color(0, 0.8, 1, 1)

[node name="TampasContainer" type="VBoxContainer" parent="UIControlPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UIControlPanel/VBoxContainer/TampasContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tampas do Leito"

[node name="TampaInferiorButton" type="Button" parent="UIControlPanel/VBoxContainer/TampasContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Adicionar/Remover Tampa Inferior"

[node name="TampaSuperiorButton" type="Button" parent="UIControlPanel/VBoxContainer/TampasContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Adicionar/Remover Tampa Superior"

[node name="ResetButton" type="Button" parent="UIControlPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Resetar Leito"

[node name="SpawnerControlPanel" type="Control" parent="UIControlPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 0
offset_left = -1655.0
offset_top = 216.25
offset_right = -1295.0
offset_bottom = 696.25
script = ExtResource("15_spawnerui")
spawner_path = NodePath("../../Spawner")

[node name="BackgroundBlur" type="ColorRect" parent="UIControlPanel/SpawnerControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -236.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.592157)

[node name="SpawnerVBox" type="VBoxContainer" parent="UIControlPanel/SpawnerControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TypeLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tipo de Objeto"

[node name="TypeOption" type="OptionButton" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="QtdLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quantidade"

[node name="QtdSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 30)
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="RaioLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Raio/Di√¢metro"

[node name="RaioSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
min_value = 0.05
max_value = 2.0
step = 0.01
value = 0.15

[node name="AlturaLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Altura"

[node name="AlturaSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
min_value = 0.05
max_value = 2.0
step = 0.01
value = 0.3

[node name="LarguraLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Largura"

[node name="LarguraSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
min_value = 0.05
max_value = 2.0
step = 0.01
value = 0.3

[node name="IntervaloLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Intervalo (s)"

[node name="IntervaloSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
min_value = 0.05
max_value = 10.0
step = 0.01
value = 1.0

[node name="SpawnButton" type="Button" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Iniciar Spawn"

[node name="ClearButton" type="Button" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Limpar Objetos"

[node name="PhysicsLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Propriedades F√≠sicas"

[node name="MassLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Massa"

[node name="MassSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="GravityScaleLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Escala da Gravidade"

[node name="GravityScaleSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
max_value = 5.0
step = 0.1
value = 1.0

[node name="LinearDampLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Amortecimento Linear"

[node name="LinearDampSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[node name="AngularDampLabel" type="Label" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(120, 18)
layout_mode = 2
text = "Amortecimento Angular"

[node name="AngularDampSpin" type="SpinBox" parent="UIControlPanel/SpawnerControlPanel/SpawnerVBox"]
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[node name="PauseMenu" parent="." instance=ExtResource("16_pausemenu")]

[node name="CameraInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = 844.0
offset_right = 96.0
offset_bottom = 884.0

[node name="Background" type="ColorRect" parent="CameraInfo"]
layout_mode = 0
offset_right = 269.0
offset_bottom = 51.0
color = Color(0.2, 0.2, 0.2, 0.592157)

[node name="CameraIndicator" type="Label" parent="CameraInfo"]
custom_minimum_size = Vector2(320, 32)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 320.0
offset_bottom = 9.0
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "C√¢mera: -
Posi√ß√£o: -"

[node name="ResetButton" type="Button" parent="CameraInfo"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 9.0
offset_right = 320.0
offset_bottom = 49.0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Resetar C√¢meras"

[node name="ObjectInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1366.0
offset_top = -938.0
offset_right = -1046.0
offset_bottom = -890.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("17_objectinfo")

[node name="Background" type="ColorRect" parent="ObjectInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -166.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.592157)

[node name="ObjectIndicator" type="Label" parent="ObjectInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 16
text = "Objetos: -
Tipo A: -
Tipo B: -
..."

[node name="BedInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1366.0
offset_top = -650.0
offset_right = -1046.0
offset_bottom = -500.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("19_bedinfo")
extraction_bed_path = NodePath("../ExtractionBed")

[node name="Background" type="ColorRect" parent="BedInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -114.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.592157)

[node name="BedIndicator" type="Label" parent="BedInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 16
text = "Leito de Extra√ß√£o:
Altura: 2.00
Largura: 1.00
Di√¢metro: 1.00
Raio Interno: 0.40
Transpar√™ncia: 0.30"

[connection signal="value_changed" from="UIControlPanel/VBoxContainer/HeightContainer/HeightSlider" to="UIControlPanel" method="_on_height_slider_value_changed"]
[connection signal="value_changed" from="UIControlPanel/VBoxContainer/WidthContainer/WidthSlider" to="UIControlPanel" method="_on_width_slider_value_changed"]
[connection signal="value_changed" from="UIControlPanel/VBoxContainer/DiameterContainer/DiameterSlider" to="UIControlPanel" method="_on_diameter_slider_value_changed"]
[connection signal="value_changed" from="UIControlPanel/VBoxContainer/InnerCylinderContainer/InnerRadiusSlider" to="UIControlPanel" method="_on_inner_radius_slider_value_changed"]
